syntax = "proto3";

package user;

option go_package = "proto-gen/authpb";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
 string token_type = 1;
 string access_token = 2;
 string refresh_token = 3;
}

